Added animation to enemy
Created a enemy div and animated it.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <div id="wrapper">
         <div id="hero"></div>
+        <div id="enemy"></div>
     </div>
 
     <script src="script.js"></script>
