--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="wrapper">
         <div id="hero"></div>
-        <div class="enemy"></div>
+        <div class="newEnemy" id="enemy"></div>
     </div>
 
     <script src="script.js"></script>
