adventure in desert

--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
 
 <body>
     <div id="wrapper">
-        <div id="hero"></div>
+        <div > <img id="hero" src="cowboy.png" alt="">
+        </div>
         <!-- <div class="newEnemy" id="enemy"></div> -->
     </div>
-
+    <div>
+        
+    </div>
     <script src="script.js"></script>
 </body>
 
