--- a/index.html
+++ b/index.html
@@ -10,13 +10,10 @@
 
 <body>
     <div id="wrapper">
-        <div > <img id="hero" src="cowboy.png" alt="">
-        </div>
+        <div id="hero"></div>
         <!-- <div class="newEnemy" id="enemy"></div> -->
     </div>
-    <div>
-        
-    </div>
+
     <script src="script.js"></script>
 </body>
 
